service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
  labels:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: canary
